--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title_short              : "Packet Fronthaul"
 title_separator          : "|"
 name                     : &name "Cisco Systems Inc"
 description              : &description "Documentation, Blogs and Tutorials on the Packet Fronthaul"
-url                      : "https://xrdocs.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://d101lr0mb7xh5s.cloudfront.net"
 baseurl                  : "/packet-fronthaul" # the subpath of your site, e.g. "/blog"
 gh_repo                  : "https://github.com/xrdocs/packet-fronthaul"
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
