--- a/_config.yml
+++ b/_config.yml
@@ -283,8 +283,8 @@ tags:
 
 
 prose:
-  siteurl: 'https://xrdocs.github.io/software-management/'
-  relativeLinks: 'https://xrdocs.github.io/software-management/links.jsonp'
+  siteurl: 'https://d101lr0mb7xh5s.cloudfront.net/packet-fronthaul/'
+  relativeLinks: 'https://d101lr0mb7xh5s.cloudfront.net/packet-fronthaul//links.jsonp'
   media: 'images'
   ignore:
     - index.md
